@@ -1,4 +1,5 @@
 Current Version: @@VERSION@@
+* Fixed parsing of generic Java classes/interfaces [Bug #1447756].
 * Added support for BlitzBasic, PureBasic and FreeBasic [FR #1100506].
 * Fixed parsing of inner classes [Python, Bug #1411963].
 * Line continuation now works [Python, Bug #928001, Patch #819471].
